<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/navbar_accounts"
        android:title="Account" />

    <item
        android:id="@+id/navigation_outfits"
        android:icon="@drawable/navbar_outfits"
        android:title="Outfits" />

    <item
        android:id="@+id/navigation_clothes"
        android:icon="@drawable/navbar_clothes"
...
